# sd-card-backup

./: .gitignore  Cargo.toml  Makefile  README.md  backup.go  classify.go  classify_test.go  config.go  config_test.go  copy.go  go.mod  go.sum  operation.go  operation_test.go
.github/workflows/: CI.yaml  test.yml
cmd/sd-card-backup/: main.go
old/: LICENSE.md  backup.go  classify.go  classify_test.go  go.mod  go.sum  operation_test.go
printer/: single-line-printer.go
src/: args.rs  main.rs
sync/: sync.go
