[package]
name = "sd-card-backup"
description = "A simple tool to backup up SD cards. (Or CFast, CFExpress, etc.)"
license = "MIT"
version = "0.3.0-draft1"
edition = "2021"

[dependencies]
clap = { version = "4.5.21", features = ["derive"] }
clap_complete = "4.5.38"

[[bin]]
name = "sd-card-backup"
